@@ -20,3 +20,7 @@ def register():
         DocumentReceiveRequest,
         RuleEngine,
         module='contract_insurance_document_request', type_='model')
+
+    Pool.register(
+        ReportGenerate,
+        module='contract_insurance_document_request', type_='report')
