@@ -9,6 +9,7 @@ from trytond.modules.cog_utils import batch, coop_date
 
 __all__ = [
     'DocumentRequestBatch',
+    'BatchRemindDocuments',
     ]
 
 
@@ -63,3 +64,37 @@ class DocumentRequestBatch(batch.BatchRoot):
                 wizard.execute(wizard_id, {}, 'post_generation')
                 cls.logger.info('Processed report request for %s' %
                     cur_object.get_rec_name(None))
+
+
+class BatchRemindDocuments(batch.BatchRoot):
+    'Batch Remind Documents'
+
+    __name__ = 'batch.remind.documents'
+
+    logger = logging.getLogger(__name__)
+
+    @classmethod
+    def convert_to_instances(cls, ids):
+        return []
+
+    @classmethod
+    def select_ids(cls, treatment_date, extra_args=None):
+        on_model = extra_args.get('on_model', False)
+        assert on_model, 'The parameter on_model is required'
+        Model = Pool().get(on_model)
+        return Model.get_reminder_candidates()
+
+    @classmethod
+    def execute(cls, objects, ids, treatment_date, extra_args):
+        on_model = extra_args.get('on_model', False)
+        assert on_model, 'The parameter on_model is required'
+        Model = Pool().get(on_model)
+        assert hasattr(Model, 'get_reminder_candidates'), \
+            '%s does not implement get_reminder_candidates' % Model.__name__
+        objects = Model.browse(ids)
+        with Transaction().set_context(force_remind=True):
+            Model.generate_reminds_documents(objects)
+
+    @classmethod
+    def get_batch_args_name(cls):
+        return ['on_model']
