@@ -8,3 +8,4 @@ depends:
 xml:
     document.xml
     attachment.xml
+    event.xml
