@@ -1,4 +1,5 @@
 Version 1.8 - 2016-07-06
+* Add batch for automatic document reminder
 
 Version 1.6 - 2015-12-23
 
